Fixed visible artifacts on rotation of details marker (Firefox) (#6268)
* Work around collapsible block icon rotation bug

* Minify link to upstream issue

--- a/src/templates/assets/stylesheets/main/extensions/pymdownx/_details.scss
+++ b/src/templates/assets/stylesheets/main/extensions/pymdownx/_details.scss
@@ -69,6 +69,9 @@
     display: block;
     min-height: px2rem(20px);
     padding-inline-end: px2rem(36px);
+    // Hack: Work around Firefox bug that renders a subpixel outline when
+    // rotating a mask image element - see https://t.ly/qA1s4
+    overflow: hidden;
     cursor: pointer;
     border-start-start-radius: px2rem(2px);
     border-start-end-radius: px2rem(2px);
